correção de alguns bugs